# harvest

./: Cargo.toml  LICENSE  output.txt
src/: main.rs
src/resources/: commonwords.txt
