[package]
name = "harvest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking"]}
select = "0.5"
tokio = { version = "1", features = ["full"] }
regex = "1"
unicode-normalization = "0.1"